force-app/main/default/objects/Stock_History__c/Stock_History__c.object-meta.xml
<CustomObject>
    <label>Stock History</label>
    <nameField>
        <label>Stock History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>