force-app/main/default/objects/Stock_History__c/fields/Number_In__c.field-meta.xml
<CustomField>
    <fullName>Number_In__c</fullName>
    <label>Number In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>