force-app/main/default/objects/Stock_History__c/fields/Number_Out__c.field-meta.xml
<CustomField>
    <fullName>Number_Out__c</fullName>
    <label>Number Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>