force-app/main/default/objects/Stock_History__c/fields/Stock_After_The_Day__c.field-meta.xml
<CustomField>
    <fullName>Stock_After_The_Day__c</fullName>
    <label>Stock After The Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>