force-app/main/default/objects/Stock_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Stock_At_The_Start__c</columns>
    <columns>Stock_After_The_Day__c</columns>
    <columns>Number_In__c</columns>
    <columns>Number_Out__c</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>